tests/ui/infinite/infinite-type-alias-mutual-recursion.stderr
error[E0391]: cycle detected when expanding type alias `X1`
  --> $DIR/infinite-type-alias-mutual-recursion.rs:1:11
   |
LL | type X1 = X2;
   |           ^^
   |
note: ...which requires expanding type alias `X2`...
  --> $DIR/infinite-type-alias-mutual-recursion.rs:3:11
   |
LL | type X2 = X3;
   |           ^^
note: ...which requires expanding type alias `X3`...
  --> $DIR/infinite-type-alias-mutual-recursion.rs:4:11
   |
LL | type X3 = X1;
   |           ^^
   = note: ...which again requires expanding type alias `X1`, completing the cycle
   = note: type aliases cannot be recursive
   = help: consider using a struct, enum, or union instead to break the cycle
   = help: see <https://doc.rust-lang.org/reference/types.html#recursive-types> for more information
note: cycle used when collecting item types in top-level module
  --> $DIR/infinite-type-alias-mutual-recursion.rs:1:1
   |
LL | / type X1 = X2;
LL | |
LL | | type X2 = X3;
LL | | type X3 = X1;
LL | |
LL | | fn main() {}
   | |____________^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to previous error

For more information about this error, try `rustc --explain E0391`.
